<resources>
    <string name="app_name">Travel Planer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Sign up</string>
    <string name="title_activity_new_activity">Find and plan an activity</string>
    <string name="title_activity_new_comment">Rate and comment a object</string>
    <string name="title_activity_new_route">Add a new route</string>
    <string name="title_activity_new_travel">Start planning a travel</string>
    <string name="title_activity_profile">Profile details</string>
    <string name="title_activity_object">Here will go the name of the object </string>
    <string name="title_activity_route_list">Planned activities</string>
    <string name="title_activity_route_map">Check your route on map</string>
    <string name="title_activity_routes">Choose a route</string>
    <string name="title_activity_travel_info">About travel</string>
    <string name="title_activity_travel_items">Packing list</string>
    <string name="title_activity_travels">Choose your travel</string>
    <!-- Strings related to auth -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_first_name">First name</string>
    <string name="prompt_last_name">Last name</string>
    <string name="prompt_location">Location</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="dont_have_an_account"><a href="">Create an account</a></string>
    <string name="have_an_account"><a href="">I already have an account</a></string>

    <string name="prompt_origin_location">Going from</string>
    <string name="prompt_destination_location">Going to</string>
    <string name="prompt_origin_date">Departure date</string>
    <string name="prompt_origin_time">Departure time</string>
    <string name="prompt_destination_date">Arrival date</string>
    <string name="prompt_destination_time">Arrival time</string>
    <string name="prompt_mode">Travel mode</string>
    <string name="prompt_accommodation_name">Hotel</string>
    <string name="prompt_accommodation_address">Hotel address</string>
    <string name="prompt_accommodation_email">Hotel email</string>
    <string name="prompt_accommodation_phone">Hotel phone</string>
    <string name="prompt_new_route">Route name</string>
    <string name="prompt_route_date">Planned date</string>
    <string name="prompt_new_comment">Say what you think</string>
    <string name="prompt_rating">Rate this object</string>
    <string name="prompt_activity_type">What do you want to do</string>
    <string name="prompt_activity_time">What time do you want to do it</string>
    <string name="prompt_new_item">Add item</string>

    <string name="accommodation_info">Hotel</string>
    <string name="items_list_title">Check your packing list!</string>

    <string name="dummy_obj_description">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec varius tortor non faucibus malesuada. Quisque porta neque eget nisl iaculis, a dapibus orci faucibus. Nulla id ligula at felis sagittis rhoncus. Aenean auctor at erat vitae suscipit. Phasellus pulvinar lacus sit amet venenatis mollis. Donec suscipit arcu sit amet urna eleifend malesuada non ut sem. Phasellus et ante eget magna pellentesque venenatis.
        Vivamus interdum ante id lectus ultricies feugiat. Mauris in cursus metus, vel mattis quam. Nulla facilisi. Aliquam vestibulum ligula mattis magna hendrerit lobortis. Suspendisse non iaculis metus. Nulla tincidunt et augue et hendrerit. Mauris sed felis in dui commodo tristique et ut magna.
    </string>

    <!-- network communication -->
    <string name="BASE_URL">http://10.0.2.2:8080/</string>
    <string name="network_failure">Failure in network communication.</string>
<<<<<<< HEAD
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
=======
    <string name="PREFS_NAME">AUTH_PREFS</string>
>>>>>>> 2fa952b53179e5d52b2ed3073e9c3acf35c17349
</resources>
