<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".NewTravelActivity"
    tools:showIn="@layout/app_bar_new_travel">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/origin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_origin_location"
                android:inputType="textAutoComplete"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/nav_header_vertical_spacing"
            android:paddingRight="@dimen/nav_header_vertical_spacing"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_origin_date" />

                <Spinner
                    android:id="@+id/origin_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:pointerIcon="top_right_diagonal_double_arrow"
                    android:spinnerMode="dialog" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_origin_time" />

                <Spinner
                    android:id="@+id/origin_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:pointerIcon="top_right_diagonal_double_arrow"
                    android:spinnerMode="dialog" />
            </LinearLayout>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/destination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_destination_location"
                android:inputType="textAutoComplete"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/nav_header_vertical_spacing"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/nav_header_vertical_spacing"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_destination_date" />

                <Spinner
                    android:id="@+id/destination_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:pointerIcon="top_right_diagonal_double_arrow"
                    android:spinnerMode="dialog" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_destination_time" />

                <Spinner
                    android:id="@+id/destination_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:pointerIcon="top_right_diagonal_double_arrow"
                    android:spinnerMode="dialog" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/nav_header_vertical_spacing"
            android:paddingTop="@dimen/login_vertical_margin"
            android:paddingRight="@dimen/nav_header_vertical_spacing"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prompt_mode" />

            <Spinner
                android:id="@+id/mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:pointerIcon="top_right_diagonal_double_arrow"
                android:spinnerMode="dropdown" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>